# client-server

./: README.md
client/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  config.cpp  config.h  log.cpp  log.h  main.cpp
